--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 	<div id="ui"></div>
 	<script src="./dist/triPlanner.js"></script>
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLk1Q4ZhxulHQK07gdTx964zXlrp3PSTY&callback=initMap"></script> -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLk1Q4ZhxulHQK07gdTx964zXlrp3PSTY&callback=initMap"></script>
 </body>
 </html>
