--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="ui"></div>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLk1Q4ZhxulHQK07gdTx964zXlrp3PSTY"></script>
 	<script src="./dist/triPlanner.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLk1Q4ZhxulHQK07gdTx964zXlrp3PSTY&callback=initMap"></script>
 </body>
 </html>
